<resources>
    <string name="app_name">CJ Productions</string>

    <!-- /////////////////////// TITULOS DE ACTIVITIS ////////////////////// -->
    <string name="tituloMenuComprarProductos">Comprar productos</string>
    <string name="tituloIniciarSesion">Iniciar Sesion</string>
    <string name="tituloRegistrarse">Registrarse</string>
    <string name="tituloRestablecerPassword">Restablecer contraseña</string>
    <string name="tituloEditarPerfil">Editar Perfil</string>
    <string name="tituloPerfilUsuarios">Mi perfil</string>
    <string name="tituloMenuSoporte">Atención al cliente</string>

    <!-- Nombre del SharedPreferences-->
    <string name="preferenciasFile">com.example.cjproductions.PREFERENCIAS</string>

    <!-- /////////////////////// MainActivity ////////////////////// -->
    <string name="mainBtComprar">Comprar</string>
    <string name="mainBtIniciarSesion">Iniciar sesión</string>
    <string name="mainBtRegistrarse">Registrarse</string>
    <string name="mainBtCerrarSesion">Cerrar Sesión</string>
    <string name="mainBtPerfil">Ver perfil</string>

    <!-- Textos para los botones del Main Activity cuando se haga un LongClick -->
    <string name="mainTextoBtSaberMas">Pulsa para obtener mas informacion del videojuego</string>
    <string name="mainTextoBtVerPerfil">Pulsa para ver y configurar tu perfil</string>

    <!-- Desplegable -->
    <string name="textoAtencionCliente">Atencion al cliente</string>
    <string name="textoComprarProductos">Comprar Productos</string>
    <string name="textoNovedades">Novedades</string>
    <string name="textoSobreNosotros">Sobre Nosotros</string>

    <!-- String que aparece cuando se cierra sesion correctamente -->
    <string name="sesionCerradaCorrectamente">Sesión cerrada correctamente</string>

    <!-- String que aparece cuando no hay sesión inicada y se decide pulsar en atencion cliente -->
    <string name="noSesionIniciada">Debe de iniciar sesión para acceder</string>

    <!-- String que aparece cuando se va a iniciar un chat con una cuenta de usuario -->
    <string name="alertChatUser">Si cierra la ventana del chat, tendrá que volver a entrar en cola. ¿Esta seguro?</string>

    <!-- valores del show alert -->
    <string name="aceptar">Si</string>
    <string name="cancelar">No</string>

    <!-- /////////////////////// Inicio Sesion y Registrarse ////////////////////// -->
    <string name="etEmail">Email</string>
    <string name="etContraseña">Contraseña</string>
    <string name="etContraseña2">Confirmar contraseña</string>
    <string name="btIniciarSesion">Iniciar sesión</string>
    <string name="btRegistrarse">Resistrarse</string>
    <string name="btResistrarseGoogle">Iniciar sesion con Google</string>
    <string name="btRestablecerContrasena">He olvidado mi contraseña</string>
    <string name="btEnviarEmailRecuperacion">Enviar correo de recuperacion</string>

    <!-- Texto para los botones de Inicio de sesion -->
    <string name="textoBtLogin">Pulsa para iniciar sesión</string>
    <string name="textoBtRegistrarse">Pulsa para registrarte</string>
    <string name="textoBtRegistrarseGoogle">Pulsa para registrarte usando una cuenta de correo electronico de Google</string>
    <string name="textoEtRestablecerContrasena">Introduce el correo</string>

    <!-- String para la notificar que un campo está vacío -->
    <string name="error_campos">Rellene el campo %s</string>

    <!-- String que aparece cuando las contraseñas no coinciden -->
    <string name="errorContraseña">Las contraseñas no son iguales</string>

    <!-- String que aparece cuando el campo email no es valido -->
    <string name="emailNoValido">El email no tiene un formato válido</string>

    <!-- String que aparece cuando la contraseña tiene menos de 6 caracteres -->
    <string name="contraseñaLongitudError">La contraseña tiene que tener mínimo 6 caracteres</string>

    <!-- String que aparece cuando se registra correctamente un usuario -->
    <string name="registroCorrecto">Usuario registrado correctamente</string>

    <!-- String que aparece cuando se inicia sesion correctamente -->
    <string name="inicioSesionCorrecto">Se ha iniciado sesión correctamente</string>

    <!--/////////////////////// VER PERFIL ////////////////////// -->
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="tCorreo">Dirección de correo electronico</string>
    <string name="tNombre">Nombre completo</string>
    <string name="tTelefono">Numero de telefono</string>
    <string name="etValorNoProporcionado">No proporcionado</string>

    <string name="btEditarPerfil">Editar perfil</string>
    <string name="btCambiarContrasena">Cambiar contraseña</string>

    <string name="textoBtCerrarSesion">Pulsa para cerrar sesión</string>
    <string name="textoBtEditarPerfil">Pulsa para editar tu perfil</string>
    <string name="textoBtEditarContrasena">Pulsa para cambiar la contraseña</string>

    <string name="mensajeEditarContrasena">Se ha enviado un correo para restablecer la contraseña</string>

    <!--/////////////////////// EDITAR PERFIL ////////////////////// -->
    <string name="btCambiarImagen">Editar imagen</string>
    <string name="btGuardar">Guardar datos</string>
    <string name="textoBtGuardar">Pulsa para guardar los datos</string>
    <string name="textoBtCambiarImagen">Pulsa para editar la foto de perfil</string>

    <!-- DIALOGO EDITAR FOTO-->
    <string name="textoDialogo">Actualizar logo de perfil</string>
    <string name="btCamara">Cámara</string>
    <string name="btDefecto">Por defecto</string>
    <string name="btGaleria">Galería</string>
    <string name="dialogoTitulo">Elegir foto</string>

    <!-- /////////////////////// COMPRAR PRODUCTOS /////////////////////// -->
    <string name="tvNombre">Nombre</string>


    <!-- ////////////////////// SOBRE NOSOTROS /////////////////////////// -->
    <string name="sobreNosotros">CJ Productions es una empresa creada con el objetivo de transmitir nuevas experiencias
                                en el mundo de los videojuegos.</string>

    <string name="sobreNosotros2">Creada en Almería y con la meta de llegar a todos
                                los rincones del mundo.</string>

    <!-- ////////////////////// NOTIFICACIONES /////////////////////////// -->
    <string name="channel_name">notificacion</string>
    <string name="tituloNotificacion">Muchas gracias por registrarte</string>
    <string name="textoNotificacion">Estamos encantados de que formes parte de nuestra pequeña comunidad
                                    y esperamos que estés disfrutando de nuestros videojuegos.
                                    Ya puedes iniciar sesión, pulsa en la notificación o accede desde el
                                    menú principal.</string>
    <string name="textoNotificacionGoogle">Estamos encantados de que formes parte de nuestra pequeña comunidad
                                    y esperamos que estés disfrutando de nuestros videojuegos.
                                    Ya puedes iniciar sesión, pulsa en la notificación o accede desde el
                                    menú principal.</string>
    <string name="channel_description">canalNotificacion</string>


</resources>