<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/AtencionCliente"
        android:title="@string/textoAtencionCliente"
        app:showAsAction="never"/>

    <item android:id="@+id/Novedades"
        android:title="@string/textoNovedades"
        app:showAsAction="never"/>

    <item android:id="@+id/ComprarProductos"
        android:title="@string/textoComprarProductos"
        app:showAsAction="never"/>

    <item android:id="@+id/SobreNosotros"
        android:title="@string/textoSobreNosotros"
        app:showAsAction="never"/>

    <item android:id="@+id/mainBtRegistrarse"
        android:title="@string/mainBtRegistrarse"
        android:icon="@drawable/add_user_icon_blanco"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/mainBtIniciarSesion"
        android:title="@string/mainBtIniciarSesion"
        android:icon="@drawable/login_icon_blanco"
        app:showAsAction="ifRoom"/>

    <!--
    <item android:id="@+id/mainBtVerPerfil"
        android:title="@string/mainBtIniciarSesion"
        android:icon="@drawable/profile_icon"
        app:showAsAction="ifRoom"/>
    -->


</menu>