<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textoDialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="42dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/textoDialogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogoBtDefecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btDefecto"
            android:layout_marginStart="6dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/dialogoBtGaleria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btGaleria"
            android:layout_marginStart="6dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/dialogoBtCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btCamara"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>