<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.InicioSesion"
    android:background="@drawable/background_login">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="#20FFFFFF"
        app:cardElevation="2dp"
        android:layout_alignParentBottom="true"
        app:cardUseCompatPadding="true"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="#5EB1B1B1"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/etEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="#5EB1B1B1"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/etContraseña"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btIniciarSesion"
                    android:backgroundTint="#4caf50"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>